<resources>
    <string name="app_name">Music </string>
    <string name="home">Home</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_song">Title Song</string>
    <string name="singer">Ca sĩ</string>
    <string name="stream_text_follow">Hear the latest music from artists and podcasts you follow</string>
    <string name="creators">Creators to follow</string>
    <string name="name_you_like">More of what you like</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="party">Party</string>
    <string name="popular">Popular</string>
    <string name="newly_posted_tracks">Newly posted tracks</string>
    <string name="upload">Upload</string>
    <string name="artist">Artist</string>
    <string name="chill">Chill</string>
    <string name="name_song">Chạy về khóc với anh</string>
    <string name="made_by">Made by</string>
    <string name="play_all">Play all</string>
    <string name="personal">Personal</string>
    <string name="your_profile">Your profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="channel_id">Channel Service</string>
    <string name="continue_with_spotify">Continue with Spotify</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="timer_off_music">Hẹn giờ tắt</string>
    <string name="fifteen_minutes">15 phút</string>
    <string name="thirty_minutes">30 phút</string>
    <string name="forty_minutes">40 phút</string>
    <string name="playlist">Playlist</string>
</resources>