<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".home.HomeFragment">

            <LinearLayout
                android:id="@+id/linearToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUpload"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_upload" />

                <ImageView
                    android:id="@+id/imgNotify"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_notify" />


            </LinearLayout>

            <TextView
                android:id="@+id/tvTitleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearToolbar"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:paddingVertical="8dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvYouLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitleHome"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:paddingVertical="8dp"
                android:text="@string/name_you_like"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvYouLike"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:paddingVertical="4dp"
                android:text="Suggestions based on what you've liked or played"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvYourLike"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_below="@id/tvSuggestion"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvParty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rcvYourLike"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:paddingVertical="8dp"
                android:text="@string/party"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvParty"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:paddingVertical="4dp"
                android:text="@string/popular"
                android:textSize="14sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvParty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPopular"
                android:layout_marginVertical="@dimen/dp_12"
                android:clipToPadding="false"
                android:focusable="true"
                android:paddingEnd="@dimen/dp_10" />

            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rcvParty"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:paddingVertical="8dp"
                android:text="@string/upload"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNewTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUpload"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:paddingVertical="4dp"
                android:text="@string/newly_posted_tracks"
                android:textSize="14sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvUpload"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_below="@id/tvNewTrack"
                android:layout_marginVertical="@dimen/dp_12"
                android:clipToPadding="false"
                android:focusable="true"
                android:visibility="gone"
                android:paddingEnd="@dimen/dp_10" />

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rcvUpload"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:paddingVertical="8dp"
                android:text="@string/artist"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBased"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvArtist"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:paddingVertical="4dp"
                android:text="Based on your listening"
                android:textSize="14sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBased"
                android:layout_marginVertical="@dimen/dp_12"
                android:clipToPadding="false"
                android:focusable="true"
                android:paddingEnd="@dimen/dp_10" />

            <TextView
                android:id="@+id/tvChill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rcvArtist"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:paddingVertical="8dp"
                android:text="@string/chill"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPopularChill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChill"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:paddingVertical="4dp"
                android:text="Popular playlist chill"
                android:textSize="14sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvChill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPopularChill"
                android:layout_marginVertical="@dimen/dp_12"
                android:clipToPadding="false"
                android:focusable="true"
                android:paddingEnd="@dimen/dp_10" />

        </RelativeLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
