<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerMainHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearBottomNavi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearBottomNavi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bottom_navi"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/linearHome"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_home_toggle" />

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:visibility="invisible"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearStream"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgStream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_flash_toggle" />

                    <TextView
                        android:id="@+id/tvStream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stream"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:visibility="gone"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_toggle" />

                    <TextView
                        android:id="@+id/tvSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:visibility="gone"
                         />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLibrary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgLibrary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_library_toggle" />

                    <TextView
                        android:id="@+id/tvLibrary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/library"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:visibility="gone"
                         />
                </LinearLayout>


            </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>