<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.personal.PersonalFragment">


    <TextView
        android:id="@+id/tvTitlePersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="start"
        android:paddingVertical="@dimen/dp_8"
        android:text="@string/personal"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeYourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitlePersonal"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        >


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgPersonal"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_centerVertical="true"
            app:riv_corner_radius="@dimen/dp_30" />

        <LinearLayout
            android:id="@+id/linearYourProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_toEndOf="@id/imgPersonal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvYourProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View public profile"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgUpdatePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:src="@drawable/ic_pencil"
            android:padding="@dimen/dp_12"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeYourProfile"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSettings"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_60"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSettings"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_60"
        android:text="Sign in"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:visibility="invisible"/>

</RelativeLayout>