<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />


            <RelativeLayout
                android:id="@+id/layoutArtist"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgBgArtist"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/grey"
                    android:scaleType="centerCrop" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgArtistBack"
                    android:layout_width="@dimen/dp_36"
                    android:layout_height="36dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/custom_bg_white"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_back" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgArtistDetail"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_120"
                    android:layout_below="@id/imgBgArtist"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="-60dp"
                    android:src="@drawable/img_song"
                    app:riv_corner_radius="@dimen/dp_60" />

                <TextView
                    android:id="@+id/tvNameArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgArtistDetail"
                    android:layout_marginHorizontal="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/name_song"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFollower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNameArtist"
                    android:layout_marginHorizontal="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/made_by"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/btnPlayAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvFollower"
                    android:layout_marginHorizontal="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/custom_sign_in_apple"
                    android:paddingHorizontal="@dimen/dp_40"
                    android:paddingVertical="@dimen/dp_8"
                    android:text="@string/play_all"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />

                <RelativeLayout
                    android:id="@+id/linearTopTracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnPlayAll"
                    android:layout_marginHorizontal="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_8">

                    <TextView
                        android:id="@+id/tvTopTrack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Top tracks"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/tvSeeAllTopTracks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="See All"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvTopTracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearTopTracks"
                    android:layout_marginTop="@dimen/dp_12" />


            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>